# catalyst-chain-syncer

./: Cargo.toml
crates/cardano-immutabledb-reader/: Cargo.toml
crates/cardano-immutabledb-reader/src/: block_reader.rs  lib.rs
crates/cardano-immutabledb-reader/testbench/: Cargo.toml
crates/cardano-immutabledb-reader/testbench/src/: main.rs
crates/catalyst-chaindata-recover/: Cargo.toml
crates/catalyst-chaindata-recover/src/: lib.rs
crates/catalyst-chaindata-types/: Cargo.toml
crates/catalyst-chaindata-types/src/: lib.rs
crates/catalyst-chaindata-writer/: Cargo.toml
crates/catalyst-chaindata-writer/sql/: create_indexes.sql
crates/catalyst-chaindata-writer/src/: connection.rs  lib.rs
crates/catalyst-chaindata-writer/src/writers/: cardano_block.rs  cardano_spent_txo.rs  cardano_transaction.rs  cardano_txo.rs  mod.rs  network.rs
crates/db-util/: Cargo.toml
crates/db-util/src/: connection.rs  lib.rs
crates/postgres-store/: Cargo.toml
crates/postgres-store/sql/: create_indexes.sql  create_tables.sql  latest_synced_slot.sql  voting_power_by_stake_credential.sql
crates/postgres-store/src/: lib.rs
crates/postgres-util/: Cargo.toml
crates/postgres-util/src/: lib.rs
sql/: find_missing_data.sql
