[package]
name = "cardano-immutabledb-reader"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.84"
binary-layout = "4.0.2"
tokio = { workspace = true, features = ["fs", "macros", "io-util", "sync", "rt"] }
tokio-util = "0.7.11"

[dev-dependencies]
pallas-traverse = "0.25.0"
tokio = { workspace = true, features = ["macros", "rt"] }
