[package]
name = "catalyst-chaindata-writer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
chrono = "0.4.38"
lazy_static = "1.4.0"
pallas-addresses = "0.25.0"
pallas-traverse = { version = "0.25.0" }
serde = { version = "1.0.202", default-features = false, features = ["derive", "std"] }
serde_json = "1.0.117"
tokio = { workspace = true, default-features = false, features = ["macros", "rt", "sync"] }
tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4", "with-serde_json-1"] }
