[package]
name = "postgres-store"
version = "0.1.0"
edition = "2021"

[dependencies]
catalyst-chaindata-recover = { workspace = true }
catalyst-chaindata-types = { workspace = true }
catalyst-chaindata-writer = { workspace = true }

anyhow = { workspace = true }
tokio = { workspace = true, default-features = false, features = ["macros", "rt"] }
tokio-postgres = { workspace = true }
